author name,image, view,icon aadded

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         crossorigin="anonymous"></script>
 
 </body>
-<footer class=" w-100 bg-dark text-center text-white ">
+<footer class=" w-100 bg-dark text-center text-white g-5 ">
     <!-- Grid container -->
     <div class="container  p-5 ">
         <h1 class="text-center p-3">BDNews24/7</h1>
@@ -83,6 +83,7 @@
         <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
 
         <a href="https://twitter.com/home?lang=en"><i class=" fa-brands fa-twitter-square"></i></a>
+
 
 
 
