--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <!--   navbar start -->
 
         <section>
-            <nav class="navbar navbar-expand-lg bg-light .d-flex justify-content-between p-2">
+            <nav class=" p-2 navbar navbar-expand-lg bg-light ">
 
                 <div>
-                    <a class="nav-link active fs-4 text fw-bold text-primary " aria-current="page"
-                        href="#">BDNews24/7</a>
+                    <a class="d-flex justify-content-between nav-link active fs-4 text fw-bold text-primary "
+                        aria-current="page" href="#">BDNews24/7</a>
 
                 </div>
                 <div class="d-flex justify-content-end gap-3">
@@ -37,8 +37,6 @@
         </section>
 
 
-
-
     </header>
 
     <main class="container">
@@ -50,6 +48,25 @@
             </div>
         </section>
         <!-- news heading section end-->
+
+        <!-- result and button section -->
+        <!--  display input -->
+
+
+
+        <div class="mb-5 p-2">
+            <label for="TextInput" class="form-label"> </label>
+            <input type="text" id="TextInput" class="form-control">
+        </div>
+
+        <section class="mb-5 p-2 d-flex justify-content-between">
+            <div><button type="submit" class="btn btn-primary">Submit</button>
+                <input type="text">
+            </div>
+            <div><button type="submit" class="btn btn-primary">Todays pick</button>
+                <button type="submit" class="btn btn-light text-primary">Trending</button>
+            </div>
+        </section>
 
         <!--  card section -->
         <section>
