--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
     </header>
 
     <main class="container">
+        <section>
+            <div id="count-news">
+
+            </div>
+        </section>
         <!-- news heading section -->
         <section class="d-flex justify-content-between">
             <div id="news-categories-container" class="d-flex justify-content-between">
-                <nav class="nav  ">
+                <nav id="searching" class="nav  ">
                 </nav>
             </div>
         </section>
