fix another error

--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
     </header>
 
     <main class="container">
-        <section>
-            <div id="count-news">
 
-            </div>
-        </section>
         <!-- news heading section -->
         <section class="d-flex justify-content-between">
             <div id="news-categories-container" class="d-flex justify-content-between">
@@ -58,12 +54,16 @@
         <!--  display input -->
 
 
+        <section>
+            <div id="count-news">
 
-        <div class="mb-5 p-2">
+            </div>
+        </section>
+        <!--     <div class="mb-5 p-2">
             <label for="TextInput" class="form-label"> </label>
             <input type="text" id="TextInput" class="form-control">
         </div>
-
+ -->
         <section class="mb-5 p-2 d-flex justify-content-between">
             <div class="fw-semibold">Sort by default view:
                 <input type="text" placeholder="Default">
@@ -76,9 +76,11 @@
         <!--  card section -->
         <section>
 
+
             <div id="news-categories-01" class="row row-cols-1 row-cols-md-3 g-4">
 
-            </div>
+
+
         </section>
     </main>
     <!--  script link -->
